src/App.css
.App {
	text-align: center;
}

.App-logo {
	height: 40vmin;
	pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
	.App-logo {
		animation: App-logo-spin infinite 20s linear;
	}
}

.App-header {
	background-color: #282c34;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	font-size: calc(10px + 2vmin);
	color: white;
}

.App-link {
	color: #61dafb;
}

@keyframes App-logo-spin {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(360deg);
	}
}

.rdw-editor-toolbar {
	display: grid !important;
	grid-template-columns: repeat(4, auto) !important;
	justify-content: center !important;
	align-items: center !important;
	align-content: center !important;
	gap: 12px !important;
	border: 1px solid darkgray !important;
	padding: 4px !important;
	cursor: pointer;
}

.rdw-editor-toolbar .rdw-inline-wrapper,
.rdw-list-wrapper,
.rdw-history-wrapper,
.rdw-text-align-wrapper {
	display: inline-flex !important;
	flex-direction: row !important;
	gap: 12px !important;
}

.spinner-container {
	position: fixed;
	top: 50%;
	left: 50%;
}

.spinner {
	width: 50px; /* Adjust size as needed */
	height: 50px; /* Adjust size as needed */
	border: 5px solid #f3f3f3; /* Light gray border for the background of the circle */
	border-top: 5px solid #3498db; /* Blue border for the spinning part */
	border-radius: 50%; /* Makes the square div into a circle */
	animation: spin 1s linear infinite; /* Applies the animation */
}

@keyframes spin {
	0% {
		transform: rotate(0deg); /* Start at 0 degrees rotation */
	}
	100% {
		transform: rotate(360deg); /* Rotate a full 360 degrees */
	}
}

